<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".presentation.ui.auth.age_verification.AgeFragment">
        <!--        style="@style/AppTheme.date_frag">-->


        <TextView
            android:id="@+id/sign_up_plain_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/cabin_medium"
            android:text="@string/sign_up"
            android:textColor="@color/dark_black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back"
            android:contentDescription="@string/back_button" />

        <TextView
            android:id="@+id/create_username_plain_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/roboto_medium"
            android:layout_marginStart="8dp"
            android:text="@string/when_is_your_birthday"
            android:textColor="@color/dark_black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/back_btn"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_plain_text" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/your_birthday_won_t_be_shown_publicly"
            android:textColor="@color/medium_grey"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/create_username_plain_text"
            app:layout_constraintTop_toBottomOf="@+id/create_username_plain_text" />

        <DatePicker
            android:id="@+id/date_picker2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:background="@color/pinkBtnBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            app:backgroundTint="@color/pinkBtnBackground"
            android:fontFamily="@font/cabin_medium"
            app:cornerRadius="4dp"
            android:textSize="14sp"
            android:text="@string/next"
            android:padding="6dp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_picker2" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>