<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".presentation.ui.profile.with_account.ProfileWithAccountFragment">


        <ImageView
            android:id="@+id/send_invite_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/send_invite"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_add_person" />

        <ImageView
            android:id="@+id/menu_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/open_menu"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_more_vert" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_grey"
            app:layout_constraintTop_toBottomOf="@+id/send_invite_icon" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            tools:src="@drawable/white_person_icon"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line" />

        <TextView
            android:id="@+id/user_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/cabin_medium"
            android:textColor="@color/dark_black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/user_photo"
            app:layout_constraintStart_toStartOf="@+id/user_photo"
            app:layout_constraintTop_toBottomOf="@+id/user_photo"
            tools:text="\@user83827289" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_constraint_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_tag">

            <TextView
                android:id="@+id/likes_count_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/dark_black"
                app:layout_constraintEnd_toEndOf="@+id/like_plain_text"
                app:layout_constraintStart_toStartOf="@+id/like_plain_text"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="0" />

            <TextView
                android:id="@+id/like_plain_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="6dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/likes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/likes_count_number" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/edit_profile_btn"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="26dp"
            android:background="@drawable/button_background_style"
            android:text="Sign Out Profile"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_constraint_layout" />

        <ImageButton
            android:id="@+id/favourites_icon"
            android:layout_width="40dp"
            android:layout_height="0dp"
            android:layout_marginStart="6dp"
            android:background="@drawable/button_background_style"
            android:contentDescription="@string/add_to_favourites"
            app:layout_constraintBottom_toBottomOf="@+id/edit_profile_btn"
            app:layout_constraintStart_toEndOf="@+id/edit_profile_btn"
            app:layout_constraintTop_toTopOf="@+id/edit_profile_btn"
            app:srcCompat="@drawable/ic_bookmark_border_black" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/profile_tab_layout"
            android:layout_width="0dp"
            android:visibility="invisible"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:theme="@style/TabAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_profile_btn"
            app:tabBackground="@android:color/white"
            app:tabSelectedTextColor="@color/dark_black"
            app:tabTextColor="@color/medium_grey">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_audios" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_private_audios" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_liked_audios" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewpager"
            android:layout_width="0dp"
            android:layout_height="230dp"
            android:background="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_tab_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>